# insurecast

./: .gitignore  README.md
.github/workflows/: cd.yml  ci.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/data/demo/: merged_claims_with_severity.csv  monthly_claims.csv  severity_params.csv
backend/scripts/: add_variety_to_merged_data.py  fill_missing_with_synthetic.py  ingest_osha_sir.py  merge_claims_and_severity.py
backend/src/insurecast/: chart_display_guard.py  data_repository.py  ingest_osha.py  llm_summary.py  main.py  sarimax_forecast.py
backend/tests/: test_api.py  test_chart_display_guard.py  test_health.py  test_ingest_osha.py
docs/plans/: 2026-03-04-workers-comp-dashboard-design.md  2026-03-04-workers-comp-dashboard-implementation.md
frontend/: Dockerfile  README.md  docker-entrypoint.sh  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/ui/: ChartsSection.tsx  FiltersPanel.tsx  HeroSection.tsx  KpiSection.tsx  MetadataSection.tsx  MiniSparkline.tsx  ScenarioSection.tsx  dashboard-header.tsx  forecast-chart.tsx  forecast-summary-panel.tsx  model-metadata.tsx  monthly-table.tsx  scenario-panel.tsx  smooth-summary-stack.tsx
frontend/src/app/utils/: allowed-states.ts  api.ts  chart-display-guard.ts  format.ts
